--- a/src/main/webapp/resources/template/category.ejs
+++ b/src/main/webapp/resources/template/category.ejs
@@ -1,6 +1,6 @@
 <div class="col-md-4">
     <div>
-        <img src="<%= category.image_link %>" alt="<%= category.name %>" class="img-circle img-thumbnail">
+        <img src="<%= category.link %>" alt="<%= category.name %>" class="img-circle img-thumbnail">
         <h2><%= category.name %> </h2>
         <p><%= category.description %></p>
         <a href="#" class="btn btn-primary" title="See more"><%= messages.category.button %></a>
