--- a/src/main/webapp/resources/template/admin.ejs
+++ b/src/main/webapp/resources/template/admin.ejs
@@ -3,15 +3,10 @@
     <thead>
       <tr>
         <th>Назва категорії</th>
-        <th>Питання</th>
+        <th>Опис</th>
       </tr>
     </thead>
-    <tbody>
-      <tr>
-        <td>лала</td>
-        <td>лалала</td>
-      </tr>
-
+    <tbody class="add">
     </tbody>
   </table>
 </div>
