--- a/src/main/webapp/resources/template/user.ejs
+++ b/src/main/webapp/resources/template/user.ejs
@@ -1,11 +1,11 @@
 <div width= 100 height = 200>
     <br/>
-    <em> Привіт, <%= user.username %></em><br/><br/>
-
-    <div class="container">
+    <h4></h4><em> Привіт, <%= user.name %></em><br/><br/></h4>
+    <h4> Ти вже <span class="label label-pill label-warning"> <%= user.rank %></span></h4>
+  <!--  <div class="container">
         <img src="https://drive.google.com/drive/folders/0B6hzo8nZx92wTlZBbVJQREEyaU0" class="img-circle" alt="Cinque Terre" width = 100 height= 100>
     </div>
     <br/>
-    <br/>
-<h4> <span class="label label-pill label-info"><%= messages.user.username %> </span></h4> <h5><em><%= user.username %></em></h5>
+    <br/> -->
+<h4> <span class="label label-pill label-info"><%= messages.user.username %> </span></h4> <h5><em><%= user.name %></em></h5>
 <h4> <span class="label label-pill label-success"><%= messages.user.email %> </span></h4><h5><em><%= user.email %></em></h5>
