--- a/src/main/webapp/resources/template/answer.ejs
+++ b/src/main/webapp/resources/template/answer.ejs
@@ -1,3 +1,3 @@
 <label class="radio-inline">
-    <input type="radio" name="optradio"><%= answer.text%>
+    <input type="radio" value="<%= answer.id %>" name="optradio"><%= answer.text%>
 </label><br/>
