--- a/src/main/webapp/resources/template/editUserForm.ejs
+++ b/src/main/webapp/resources/template/editUserForm.ejs
@@ -9,7 +9,7 @@
           <input type="text" class="form-control" id="usr">
         </div>
     <div class="form-group">
-      <label for="pwd">Напишіьт новий пароль:</label>
+      <label for="pwd">Напишіть новий пароль:</label>
       <input type="password" class="form-control" id="pwd">
     </div>
     <button type="button" class="btn btn-primary btn-md">Змінити</button>
