--- a/src/main/webapp/resources/template/question.ejs
+++ b/src/main/webapp/resources/template/question.ejs
@@ -7,7 +7,7 @@
         <div class = "panel-body">
             <label> </label>
 
-            <form role="form" class="que">
+            <form role="form" id="que"class="que">
             </form>
         </div>
     </div>
