--- a/src/main/webapp/resources/template/editUserForm.ejs
+++ b/src/main/webapp/resources/template/editUserForm.ejs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container us">
   <form role="form">
     <div class="form-group">
       <label for="usr">Напишіть нове ім'я:</label>
